--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bahnschrift&display=swap" rel="stylesheet">
   <style>
-    @font-face {
-      font-family: 'Snap ITC';
-      src: local('Snap ITC');
-    }
-
     * {
       margin: 0;
       padding: 0;
@@ -33,23 +28,29 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-      animation: fadeDown 1s ease;
-    }
-
-    @keyframes fadeDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
     }
 
     .logo {
       font-size: 32px;
-      font-family: 'Snap ITC';
       font-weight: 700;
       color: #e63946;
-      text-shadow: 2px 2px 0 #000;
+      font-family: 'Snap ITC', cursive;
+      text-shadow: 2px 2px 4px #000, 0 0 10px #ff004f;
     }
 
-    .nav-right {
+    .search-bar {
+      margin-left: 10%;
+      flex-grow: 1;
+    }
+
+    .search-bar input {
+      width: 100%;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+    }
+
+    .nav-links {
       display: flex;
       align-items: center;
       gap: 20px;
@@ -58,7 +59,6 @@
     .nav-links a {
       color: white;
       text-decoration: none;
-      margin: 0 10px;
       font-weight: bold;
       transition: color 0.3s ease;
     }
@@ -67,43 +67,25 @@
       color: #ff6b6b;
     }
 
-    .search-filter {
-      text-align: center;
-      margin: 20px auto 5px;
-    }
-
-    .search-filter input[type="text"] {
-      padding: 8px;
-      width: 300px;
-      border-radius: 5px;
-      border: none;
-    }
-
-    .category-bar {
-      text-align: center;
-      margin: 10px 0;
-    }
-
-    .category-bar span {
-      color: black;
-      background: white;
-      padding: 5px 15px;
-      margin: 0 5px;
-      border-radius: 5px;
-      cursor: pointer;
+    .categories {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
       font-weight: bold;
+    }
+
+    .categories span {
+      color: black;
+      background-color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
     }
 
     .hero {
       text-align: center;
-      padding: 80px 20px 40px;
+      padding: 100px 20px;
       background: rgba(0,0,0,0.5);
-      animation: fadeUp 1s ease;
-    }
-
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
     }
 
     .hero h1 {
@@ -170,83 +152,40 @@
       padding: 20px;
       text-align: center;
       color: white;
-    }
-
-    #about-content {
-      padding: 20px;
-      display: none;
-      background: rgba(255, 255, 255, 0.9);
-      color: black;
-    }
-
-    #loginPopup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      color: black;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #000;
-    }
-
-    #loginPopup input {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-    }
-
-    #loginPopup button {
-      background: #e63946;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div class="nav-right">
-      <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about" onclick="showAbout()">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <a href="#" onclick="showLogin()" style="color:white">Login</a>
-      <a href="#" style="color:white">Cart</a>
+    <div class="search-bar">
+      <input type="text" placeholder="Search for t-shirts...">
     </div>
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <a href="#login">Login</a>
+      <a href="#cart">Cart</a>
+    </nav>
   </header>
 
-  <div class="search-filter">
-    <input type="text" placeholder="Search for t-shirts...">
-  </div>
-
-  <div class="category-bar">
+  <div class="categories">
     <span>Men</span>
     <span>Women</span>
     <span>Kids</span>
   </div>
 
-  <section class="hero" id="home">
+  <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
     <p>Trendy | Comfortable | Affordable</p>
   </section>
 
-  <section id="about-content">
-    <h2>Our Story</h2>
-    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
-  </section>
-
   <section class="products" id="products">
-    <!-- Repeat product blocks to ensure scrolling -->
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986" alt="Tshirt 1">
       <div class="product-info">
         <h3>Black Round Neck</h3>
         <p>₹299</p>
@@ -254,7 +193,7 @@
       </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda" alt="Tshirt 2">
       <div class="product-info">
         <h3>White Graphic Tee</h3>
         <p>₹349</p>
@@ -262,51 +201,46 @@
       </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab" alt="Tshirt 3">
       <div class="product-info">
         <h3>Red Street Style</h3>
         <p>₹399</p>
         <button class="buy-btn">Add to Cart</button>
       </div>
     </div>
-    <!-- More product blocks -->
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1536148935331-408321065b18?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
+      <img src="https://images.unsplash.com/photo-1520975918312-1c3b85f3f3aa" alt="Men Model">
       <div class="product-info">
-        <h3>Classic Blue Tee</h3>
-        <p>₹289</p>
+        <h3>Casual Men Tee</h3>
+        <p>₹379</p>
         <button class="buy-btn">Add to Cart</button>
       </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1542062703-5a5d2aa0f71b?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
+      <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Women Model">
       <div class="product-info">
-        <h3>Urban White</h3>
-        <p>₹320</p>
+        <h3>Elegant Women Tee</h3>
+        <p>₹429</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1602551948875-7b4e0cb69f79" alt="Kids Model">
+      <div class="product-info">
+        <h3>Cool Kid's Tee</h3>
+        <p>₹299</p>
         <button class="buy-btn">Add to Cart</button>
       </div>
     </div>
   </section>
 
+  <section id="about" style="padding: 40px; background: rgba(0, 0, 0, 0.8); text-align: center;">
+    <h2>Our Story</h2>
+    <p>FA-Tshirt is not just a brand, it's a dream. Born from passion and struggle, our goal is to provide the best quality fashion at an affordable price. We believe everyone deserves to wear style with pride and confidence. Every design, every thread, tells a story — your story and ours combined.</p>
+  </section>
+
   <footer>
     &copy; 2025 FA-Tshirt. All rights reserved.
   </footer>
-
-  <div id="loginPopup">
-    <h2>Login</h2>
-    <input type="text" placeholder="Username">
-    <input type="password" placeholder="Password">
-    <button onclick="alert('Login Successful')">Login</button>
-  </div>
-
-  <script>
-    function showAbout() {
-      document.getElementById('about-content').style.display = 'block';
-      window.scrollTo(0, document.getElementById('about-content').offsetTop);
-    }
-    function showLogin() {
-      document.getElementById('loginPopup').style.display = 'block';
-    }
-  </script>
 </body>
 </html>
