--- a/index.html
+++ b/index.html
@@ -2,311 +2,179 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    @font-face {
-      font-family: 'Snap ITC';
-      src: local('Snap ITC');
-    }
-
-    * {
+    body {
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Bahnschrift', sans-serif;
-      background: url('https://wallpapercave.com/wp/wp5128415.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
     }
 
     header {
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      animation: fadeDown 1s ease;
+      background-color: #f8f8f8;
+      padding: 10px 20px;
     }
 
-    @keyframes fadeDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .logo {
-      font-size: 32px;
-      font-family: 'Snap ITC';
-      font-weight: 700;
-      color: #e63946;
-      text-shadow: 2px 2px 0 #000;
-    }
-
-    .nav-right {
+    #logo {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      gap: 20px;
     }
 
-    .nav-links a {
-      color: white;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
-      transition: color 0.3s ease;
+    #logo img {
+      height: 40px;
     }
 
-    .nav-links a:hover {
-      color: #ff6b6b;
+    #search-bar {
+      flex-grow: 1;
+      margin: 0 20px;
     }
 
-    .search-filter {
-      text-align: center;
-      margin: 20px auto 5px;
-    }
-
-    .search-filter input[type="text"] {
+    #search-bar input {
+      width: 100%;
       padding: 8px;
-      width: 300px;
-      border-radius: 5px;
-      border: none;
+      font-size: 16px;
     }
 
-    .category-bar {
-      text-align: center;
-      margin: 10px 0;
+    #menu {
+      display: flex;
+      gap: 15px;
     }
 
-    .category-bar span {
-      color: black;
-      background: white;
-      padding: 5px 15px;
-      margin: 0 5px;
-      border-radius: 5px;
+    #menu button {
+      padding: 8px 12px;
       cursor: pointer;
-      font-weight: bold;
     }
 
-    .hero {
-      text-align: center;
-      padding: 80px 20px 40px;
-      background: rgba(0,0,0,0.5);
-      animation: fadeUp 1s ease;
+    #sidebar {
+      position: fixed;
+      right: 0;
+      top: 60px;
+      width: 200px;
+      background-color: #f0f0f0;
+      padding: 10px;
+      height: calc(100% - 60px);
     }
 
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    #sidebar ul {
+      list-style: none;
+      padding: 0;
     }
 
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
+    #sidebar ul li {
+      margin-bottom: 10px;
+      cursor: pointer;
     }
 
-    .hero p {
-      font-size: 20px;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 30px;
-      padding: 40px;
-      background: rgba(0,0,0,0.7);
+    main {
+      margin-right: 210px;
+      padding: 20px;
     }
 
     .product {
-      background: #fff;
-      color: #000;
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .product:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #000;
-    }
-
-    .product img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-    }
-
-    .product-info {
-      padding: 15px;
-      text-align: center;
-    }
-
-    .product-info h3 {
+      border: 1px solid #ddd;
+      padding: 10px;
       margin-bottom: 10px;
-    }
-
-    .buy-btn {
-      background-color: #e63946;
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-
-    .buy-btn:hover {
-      background-color: #d90429;
-    }
-
-    footer {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      text-align: center;
-      color: white;
     }
 
     #about-content {
       padding: 20px;
+      background-color: #fafafa;
       display: none;
-      background: rgba(255, 255, 255, 0.9);
-      color: black;
     }
 
     #loginPopup {
       display: none;
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 20%;
+      left: 40%;
       background: white;
-      color: black;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #000;
+      border: 1px solid black;
+      z-index: 1000;
     }
 
-    #loginPopup input {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
+    footer {
+      text-align: center;
       padding: 10px;
-    }
-
-    #loginPopup button {
-      background: #e63946;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
+      background-color: #ddd;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <div class="logo">FA-Tshirt</div>
-    <div class="nav-right">
-      <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about" onclick="showAbout()">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <a href="#" onclick="showLogin()" style="color:white">Login</a>
-      <a href="#" style="color:white">Cart</a>
+    <div id="logo">
+      <img src="logo.png" alt="FA-Tshirt Logo" />
+      <small>FA-Tshirt</small>
+    </div>
+    <div id="search-bar">
+      <input type="text" placeholder="Search for products" />
+    </div>
+    <div id="menu">
+      <button onclick="showLogin()">Login</button>
+      <button>Cart</button>
     </div>
   </header>
 
-  <div class="search-filter">
-    <input type="text" placeholder="Search for t-shirts...">
+  <div id="sidebar">
+    <ul>
+      <li>Home</li>
+      <li onclick="showAbout()">About</li>
+      <li>Men</li>
+      <li>Women</li>
+      <li>New Arrivals</li>
+    </ul>
   </div>
 
-  <div class="category-bar">
-    <span>Men</span>
-    <span>Women</span>
-    <span>Kids</span>
-  </div>
-
-  <section class="hero" id="home">
-    <h1>Welcome to FA-Tshirt</h1>
-    <p>Trendy | Comfortable | Affordable</p>
-  </section>
+  <main>
+    <div class="product">
+      <h3>Trendy Black T-shirt</h3>
+      <p>High quality cotton, only ₹299</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product">
+      <h3>Minimal White T-shirt</h3>
+      <p>Premium fit, only ₹299</p>
+      <button>Add to Cart</button>
+    </div>
+  </main>
 
   <section id="about-content">
     <h2>Our Story</h2>
     <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
   </section>
 
-  <section class="products" id="products">
-    <!-- Repeat product blocks to ensure scrolling -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
-      <div class="product-info">
-        <h3>Black Round Neck</h3>
-        <p>₹299</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
-      <div class="product-info">
-        <h3>White Graphic Tee</h3>
-        <p>₹349</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <div class="product-info">
-        <h3>Red Street Style</h3>
-        <p>₹399</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <!-- More product blocks -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1536148935331-408321065b18?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
-      <div class="product-info">
-        <h3>Classic Blue Tee</h3>
-        <p>₹289</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1542062703-5a5d2aa0f71b?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
-      <div class="product-info">
-        <h3>Urban White</h3>
-        <p>₹320</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 FA-Tshirt. All rights reserved.
-  </footer>
-
   <div id="loginPopup">
+    <span onclick="closeLogin()" style="float:right;cursor:pointer;font-size:20px;">&times;</span>
     <h2>Login</h2>
     <input type="text" placeholder="Username">
     <input type="password" placeholder="Password">
     <button onclick="alert('Login Successful')">Login</button>
   </div>
 
+  <footer>
+    <p>&copy; 2025 FA-Tshirt. All rights reserved.</p>
+  </footer>
+
   <script>
     function showAbout() {
       document.getElementById('about-content').style.display = 'block';
       window.scrollTo(0, document.getElementById('about-content').offsetTop);
     }
+
     function showLogin() {
       document.getElementById('loginPopup').style.display = 'block';
     }
+
+    function closeLogin() {
+      document.getElementById('loginPopup').style.display = 'none';
+    }
   </script>
+
 </body>
 </html>
